--- a/index.html
+++ b/index.html
@@ -136,7 +136,11 @@
     </div>
 
     <div class="taskbar">
-        <button><img src="images/icons/window-icon.bmp"> Stop</button>
+        <button><img src="images/icons/window-icon.bmp"> <span class="label" >Stop</span></button>
+
+        <div class="tray">
+            <span class="clock" onclick="updateClock()">Doesn't:matter PM</span>
+        </div>
     </div>
 
 
