Links now open in current tab (for compatibility). Dropped refreshing after clicking the links to unbreak the site on mobile. Updated readme.

--- a/index.html
+++ b/index.html
@@ -55,25 +55,25 @@
                         </h3>
                     </div>
                     <ul class="sidebar-list" onmouseout="showTab(0)">
-                        <a href="https://mkozlowski.net" target="_blank" rel="noopener noreferrer" onmouseover="showTab(1)" id="tab-1" onclick="markTab(1)">
+                        <a href="https://mkozlowski.net" onmouseover="showTab(1)" id="tab-1" onclick="markTab(1)">
                             <li>
                                 <div class="list-deco">&nbsp;</div>
                                 <h4>Visit my portfolio</h4>
                             </li>
                         </a>
-                        <a href="https://trello.com/b/53oDL8mW/" target="_blank" rel="noopener noreferrer" onmouseover="showTab(2)" id="tab-2" onclick="markTab(2)">
+                        <a href="https://trello.com/b/53oDL8mW/" onmouseover="showTab(2)" id="tab-2" onclick="markTab(2)">
                             <li>
                                 <div class="list-deco">&nbsp;</div>
                                 <h4>See the games</h4>
                             </li>
                         </a>
-                        <a href="https://anilist.co/user/Maryushi3/" target="_blank" rel="noopener noreferrer" onmouseover="showTab(3)" id="tab-3" onclick="markTab(3)">
+                        <a href="https://anilist.co/user/Maryushi3/" onmouseover="showTab(3)" id="tab-3" onclick="markTab(3)">
                             <li>
                                 <div class="list-deco">&nbsp;</div>
                                 <h4>Discover anime</h4>
                             </li>
                         </a>
-                        <a href="https://github.com/Maryushi3/welcome-to-system-98" target="_blank" rel="noopener noreferrer" onmouseover="showTab(4)" id="tab-4" onclick="markTab(4)">
+                        <a href="https://github.com/Maryushi3/welcome-to-system-98" onmouseover="showTab(4)" id="tab-4" onclick="markTab(4)">
                             <li>
                                 <div class="list-deco">&nbsp;</div>
                                 <h4>Check out this project</h4>
@@ -95,7 +95,8 @@
                             Visit my portfolio
                         </h5>
                         <p> Exploring this options leads to my professional website.</p>
-                        <p>My photography, graphics design, printed media and software development works are just a mouse-click away. There are some blog posts/rants planned too!</p>
+                        <p>My photography, graphics design, printed media and software development works are just a mouse-click away. There are some blog posts/rants planned too! Also, you can contact me through there, should you so desire.</p>
+
                     </div>
                     <div class="content-2" data-img="images/globe.png">
                         <h5>
@@ -118,7 +119,7 @@
                             Check out this project
                         </h5>
                         <p>I've made this website from the ground up as a hobby project and raw font-end development excercise for myself. It was lots of fun moving things by single pixels.</p>
-                        <p>I'm very happy with the end result. It's up on my GitHub too. Go check it out!</p>
+                        <p>I'm very happy with the end result. It's up on my GitHub too. Go check it out! (may not always be up to date)</p>
                     </div>
                 </div>
                 <div class="footer">
